-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.0 Beta2, 6.6.0 Beta3, 6.6.0 Beta4
-
None
-
-
d0378c32d (6.6), 198eaaf52 (dev), 89ce65c2d (dev), 4b21b332e (6.6)
Looks like there is a regression vom 6.5.2 => 6.6.0. When disconnecting an external standard resolution monitor, using the MacBook retina display instead, the window content is not correctly scaled. Please see the attached screenshots.
This does not occur when using both displays and dragging the window between them.
Works with 6.5.2.
import QtQuick import QtQuick.Window Window { width: 640 height: 480 visible: true title: qsTr("Hello World Qt 6.6") Rectangle { color: "yellow" anchors.fill: parent } }
- relates to
-
QTBUG-115452 [Reg 6.5 -> dev] QMenu has wrong DPR initially on other screen
-
- Closed
-
| For Gerrit Dashboard: QTBUG-116232 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 498586,2 | Reduce nesting in processWindowScreenChangedEvent() | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 498587,6 | Always run screen change side effects | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 499155,2 | Reduce nesting in processWindowScreenChangedEvent() | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 502563,2 | Always run screen change side effects | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |